In index.html, put all image tags on the same line. This eliminated gaps between vertical stripe images.

--- a/logpuzzle/index.html
+++ b/logpuzzle/index.html
@@ -1,25 +1,6 @@
 <verbatim>
 <html>
 <body>
-<img src="./puzzle_images/img0.jpg">
-<img src="./puzzle_images/img1.jpg">
-<img src="./puzzle_images/img2.jpg">
-<img src="./puzzle_images/img3.jpg">
-<img src="./puzzle_images/img4.jpg">
-<img src="./puzzle_images/img5.jpg">
-<img src="./puzzle_images/img6.jpg">
-<img src="./puzzle_images/img7.jpg">
-<img src="./puzzle_images/img8.jpg">
-<img src="./puzzle_images/img9.jpg">
-<img src="./puzzle_images/img10.jpg">
-<img src="./puzzle_images/img11.jpg">
-<img src="./puzzle_images/img12.jpg">
-<img src="./puzzle_images/img13.jpg">
-<img src="./puzzle_images/img14.jpg">
-<img src="./puzzle_images/img15.jpg">
-<img src="./puzzle_images/img16.jpg">
-<img src="./puzzle_images/img17.jpg">
-<img src="./puzzle_images/img18.jpg">
-<img src="./puzzle_images/img19.jpg">
+<img src="./puzzle_images/img0.jpg"><img src="./puzzle_images/img1.jpg"><img src="./puzzle_images/img2.jpg"><img src="./puzzle_images/img3.jpg"><img src="./puzzle_images/img4.jpg"><img src="./puzzle_images/img5.jpg"><img src="./puzzle_images/img6.jpg"><img src="./puzzle_images/img7.jpg"><img src="./puzzle_images/img8.jpg"><img src="./puzzle_images/img9.jpg"><img src="./puzzle_images/img10.jpg"><img src="./puzzle_images/img11.jpg"><img src="./puzzle_images/img12.jpg"><img src="./puzzle_images/img13.jpg"><img src="./puzzle_images/img14.jpg"><img src="./puzzle_images/img15.jpg"><img src="./puzzle_images/img16.jpg"><img src="./puzzle_images/img17.jpg"><img src="./puzzle_images/img18.jpg"><img src="./puzzle_images/img19.jpg">
 </body>
 </html>
